core: fix emoji path support and Mac app bundling bug (Issue #2426)
- Modernize process execution by replacing legacy Runtime.exec() calls
  with ProcessBuilder in VMReference, AboutDialog, and DocuGenerator
   to ensure proper Unicode/Emoji argument passing.
- Force -Dsun.jnu.encoding=UTF-8 in child VM launch parameters to
  enable UTF-8 path handling across different system encodings.
- Improve path resolution in Project.java by using toRealPath() instead
  of getCanonicalPath() for robust Unicode directory handling.
- Fix Mac packaging failure by updating build.xml to correctly bundle
  the required JDK library structure (libjli.dylib and jvm.dll), resolving
  the "VM creation failed" launch error.
- Add comprehensive automated test suite (EmojiPathTest,
  EncodingDetectionTest, VMReferenceEncodingTest) to verify Unicode
  file operations and property inheritance in child VMs.